--- a/support/templates/app.approval.email.html
+++ b/support/templates/app.approval.email.html
@@ -237,7 +237,7 @@
                 Quantity
               </th>
               <th width="100" align="center">
-                Customer Quantity
+                Landed Price
               </th>
             </tr>
             {% for u in  productDetails %}
