--- a/homepage/templates/paperSolutions.html
+++ b/homepage/templates/paperSolutions.html
@@ -8,6 +8,36 @@
     a:hover {
       text-decoration: none;
     }
+    .textsize{
+      font-size:20px;
+    }
+    ol li{
+      display:inline-block;
+    }
+    .options{
+      margin-left:2em;
+      font-size:20px;
+      padding-top:1em;
+    }
+    .options li{
+      padding:1em;
+    }
+  </style>
+  <style media="screen and (max-width:768px)">
+    .textsize{
+      font-size:17px;
+    }
+    ol li{
+      display:block;
+    }
+    .options{
+      margin-left:0.1em;
+      font-size:20px;
+      padding-top:0.5em;
+    }
+    .options li{
+      padding:0.2em 0em;
+    }
   </style>
   <div class="col-md-12 text-right" style="margin-top:3em">
     <a href="/{{blogobj.shortUrl}}/{{quesobj.name.split|join:'-'}}/practise/"><span class="btn-style1">Start Exam</span></a>
@@ -25,19 +55,19 @@
       {% endfor %}
     </ul> -->
       <div class="row">
-        <div class="col-md-1" style="padding-top:2em;">
+        <div class="col-md-1 col-xs-1" style="padding-top:2em;">
           <div class="pull-right">
-            <b style="font-size:20px;">{{ forloop.counter }}</b>
+            <b class="textsize">{{ forloop.counter }}</b>
           </div>
         </div>
-        <div class="col-md-11" style="padding-left:0px;padding-top:2em;">
+        <div class="col-md-11 col-xs-11" style="padding-left:0px;padding-top:2em;">
           <div>
-            <span style="font-size:20px;">{{ques.ques.ques}}</span>
+            <span class="textsize">{{ques.ques.ques}}</span>
           </div>
-          <ol type="A" style="margin-left:2em;font-size:20px;padding-top:1em;">
+          <ol type="A" class="options">
             {% for opt in ques.ques.optionsParts.all %}
-            <li style="padding:1em;display:inline-block;">
-              <span style="font-size:20px;">{{ forloop.counter }}. {{opt.txt}}</span>
+            <li>
+              <span class="textsize">{{ forloop.counter }}. {{opt.txt}}</span>
             </li>
             {% endfor %}
           </ol>
@@ -49,7 +79,7 @@
           </div>
           <!-- <div class="col-md-offset-1 col-md-10">
             {% for sol in ques.ques.solutionParts.all %}
-            <span style="font-size:20px;">{{sol.txt}}</span>
+            <span class="textsize">{{sol.txt}}</span>
             {% endfor %}
           </div> -->
         </div>
