--- a/homepage/templates/tutorexam.html
+++ b/homepage/templates/tutorexam.html
@@ -27,10 +27,10 @@
 
 {% endblock %} {% block specific_css %}
 <link href="{% static 'css/exam.css' %}" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css" charset="utf-8">
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css" charset="utf-8"> -->
 <link rel="stylesheet" href="{% static 'css/angular-chart.min.css' %}" charset="utf-8">
 <link rel="stylesheet" href="{% static 'css/angular-ui-switch.min.css' %}" charset="utf-8">
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" charset="utf-8">
+<!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" charset="utf-8"> -->
 
 {% endblock %}
 
