--- a/homepage/templates/exam.html
+++ b/homepage/templates/exam.html
@@ -12,7 +12,7 @@
   <div class="row">
 
     <div class="col-md-9" style="min-height:100vh;padding:0;">
-      <div class="text-right">
+      <div class="text-right timer " >
         <span style="padding-right: 1em;"><b>Time Left: {{theTime}}:{{timeinsec}}</b></span>
       </div>
       <div class="maindiv">
