--- a/homepage/templates/policy.html
+++ b/homepage/templates/policy.html
@@ -1,4 +1,4 @@
-{% extends "tutorBase.html" %}
+{% extends "tutorBase.html" %}{% load staticfiles %}
 
 {% block tutorcontent %}
 
@@ -81,4 +81,9 @@
   </div>
 </div>
 {% endverbatim %}
+{% endblock %}
+
+
+{% block tutorjs %}
+<script src="{% static 'js/app.tutor.home.main.js' %}"></script>
 {% endblock %}
