--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -1427,7 +1427,7 @@ hr {
   background-position: 100% 0;
   moz-transition: all .4s ease-in-out;
   -webkit-transition: all .9s ease-in-out;
-  color:#fff;
+  color: #fff;
 }
 
 .owl-item.active.center {
@@ -1572,7 +1572,6 @@ hr {
   width: 130px;
   height: 130px;
   border-radius: 65px;
-  /* border: 2px solid #A9A9A9; */
   background-color: #FDDDF5;
   position: absolute;
   top: 47%;
@@ -1633,6 +1632,7 @@ hr {
 .studentcard1 {
   border-radius: 0 10px 10px 0;
   z-index: 1;
+  padding: 0px;
 }
 
 .carddesign {
@@ -1977,7 +1977,7 @@ hr {
 }
 
 .tb_image {
-  width: 100%;
+  width: 50%;
   border-radius: 6px;
   padding-top: 10px;
 }
@@ -2316,6 +2316,7 @@ hr {
   z-index: 10;
   border-top-right-radius: 8px;
 }
+
 .savebtn {
   color: #fff;
   padding: 0.5em 2em;
@@ -2329,6 +2330,7 @@ hr {
   border-radius: 5px;
   border-top-left-radius: 25px;
 }
+
 .btnaction {
   color: #fff;
   border: 0;
@@ -2342,7 +2344,6 @@ hr {
   border-radius: 5px;
   border-top-left-radius: 25px;
 }
-
 
 .noteImage {
   width: 20%;
@@ -2603,8 +2604,7 @@ hr {
 .imgstyle {
   width: 219.683px;
   height: 300px;
-  margin-left: -15px;
-  border-radius: 10px 0 0 10px;
+  border-radius: 10px 10px 10px 0px;
 }
 
 .genericHeading {
@@ -2832,9 +2832,11 @@ hr {
   }
 
   .imgstyle {
-    width: 125px;
-    height: 140px;
-    border-radius: 0px;
+    width: 100%;
+    height: 100%;
+    margin-left: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
   }
 
   .heartsym {
@@ -3058,8 +3060,8 @@ hr {
     border: 2px solid #A9A9A9;
     background-color: #fff;
     position: absolute;
-    top: 52%;
-    left: 40%;
+    top: 59%;
+    left: 75%;
   }
 
   .circleright {
@@ -3069,8 +3071,8 @@ hr {
     border: 2px solid #A9A9A9;
     background-color: #fff;
     position: absolute;
-    top: 35%;
-    left: 40%;
+    top: 52%;
+    left: 79%;
   }
 
   .colorcircle, .colorcircle1 {
