--- a/homepage/templates/blog.html
+++ b/homepage/templates/blog.html
@@ -1,4 +1,4 @@
-{% extends "tutorBase.html" %}
+{% extends "tutorBase.html" %}{% load staticfiles %}
 
 {% block tutorcontent %}
 
@@ -139,4 +139,8 @@
 
 
 
+{% endblock %}
+
+{% block tutorjs %}
+<script src="{% static 'js/app.tutor.blog.js' %}"></script>
 {% endblock %}
