--- a/homepage/templates/bookContent.html
+++ b/homepage/templates/bookContent.html
@@ -52,11 +52,6 @@
       <ul class="list-unstyled q_list" style="height: 97vh;overflow: auto;width: 150%;overflow-x:hidden;">
         {% for q in questions %}
         <li ng-click="toTheTop({{forloop.counter}})"><span class="q_no">Q{{ forloop.counter }}</span>
-          <!-- <div class="question">
-            <div class="" style="padding:20px;">
-              <span>Lorem ipsum dolor sit amet, consectua. Utti ea commodom.</span>
-            </div>
-          </div> -->
           {% endfor %}
         </li>
       </ul>
@@ -110,7 +105,6 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
       </div>
-      <!-- <img src="" width="100%"style="z-index:-100;opacity:0.5;;left:0;top:0;"> -->
 
       <div class="col-md-2 mobileview">
         <img src="/media/{{book.dp}}" class="tb_image">
@@ -122,9 +116,6 @@
       </div>
       <button class="btn btn-primary pull-right sign_btn" ng-click="signin()">sign in</button>
     </div>
-    <!-- <div ng-show="displ">
-      <span>Q{{idx}}</span>
-    </div>  -->
     <div class="col-md-12 q_main_div">
       <div class="container-fluid q_container" ng-init="initiateMath()">
         {% for q in questions %}
@@ -135,6 +126,9 @@
           <div class="row" style="padding-left:30px;width:90%;">
             {% for qp in q.quesParts.all %}
             <p class="qes">{{qp.txt | safe}}</p>
+            {% if qp.image != null %}
+            <img src="/media/{{qp.image}}" alt="">
+            {% endif %}
             {% endfor %}
           </div>
           <h5 class="text-primary" style="padding-top: 10px;padding-bottom: 10px;padding-left:15px"><strong>Solution :</strong> </h5>
