--- a/homepage/templates/homepagenotes.html
+++ b/homepage/templates/homepagenotes.html
@@ -1,4 +1,4 @@
-{% extends "tutorBook.html" %}
+{% extends "tutorBook.html" %}{% load staticfiles %}
 
 
 {% block bookcontent %}
@@ -31,4 +31,8 @@
     </div>
   </div>
 </div>
+{% endblock %}
+
+{% block tutorjs %}
+<script src="{% static 'js/app.tutor.home.main.js' %}"></script>
 {% endblock %}
