--- a/homepage/templates/notFound404.html
+++ b/homepage/templates/notFound404.html
@@ -1,5 +1,4 @@
-
-{% extends "tutorBase.html" %}
+{% extends "tutorBase.html" %}{% load staticfiles %}
 
 {% block tutorcontent %}
 
@@ -26,4 +25,8 @@
 </div>
 
 
+{% endblock %}
+
+{% block tutorjs %}
+<script src="{% static 'js/app.tutor.home.main.js' %}"></script>
 {% endblock %}
