--- a/homepage/templates/terms.html
+++ b/homepage/templates/terms.html
@@ -1,4 +1,4 @@
-{% extends "tutorBase.html" %}
+{% extends "tutorBase.html" %}{% load staticfiles %}
 
 {% block tutorcontent %}
 
@@ -52,4 +52,8 @@
 </div>
 
 {% endverbatim %}
+{% endblock %}
+
+{% block tutorjs %}
+<script src="{% static 'js/app.tutor.home.main.js' %}"></script>
 {% endblock %}
