--- a/homepage/templates/examResults.html
+++ b/homepage/templates/examResults.html
@@ -66,7 +66,7 @@
                 <span style="font-size:20px;padding:0.4em;text-align:left;" class="leftalign"><b>{{a.title}}</b></span>
               </div>
               <div class="col-md-3">
-                <span style="font-size:20px;padding:0.4em;text-align:right;margin-right: 1em;"><b>{{a.correct?a.correct:'0'}}/{{a.ques.length}}</b></span>
+                <span style="font-size:20px;padding:0.4em;text-align:right;margin-right: 1em;"><b>{{a.correct?a.correct:'0'}}/{{subcount[$index].count}}</b></span>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
             <table style="width:100%">
               <tr style="font-size:17px;">
                 <td style="text-align: left;">Total No Questions</td>
-                <td>{{a.ques.length}}</td>
+                <td>{{subcount[$index].count}}</td>
               </tr>
               <tr style="font-size:17px;margin-top:1em;">
                 <td style="text-align: left;">Correct Answers</td>
@@ -82,65 +82,20 @@
               </tr>
               <tr style="font-size:17px;margin-top:1em;">
                 <td style="text-align: left;">Incorrect Answers</td>
-                <td>{{a.incorrect?a.incorrect:'0'}}</td>
+                <td>{{subcount[$index].count-a.correct}}</td>
               </tr>
-              <!-- <tr style="font-size:17px;margin-top:1em;">
-                <td style="text-align: left;">Not Visited</td>
-                <td>{{exam.notview[$index]}}</td>
-              </tr>
-              <tr style="font-size:17px;margin-top:1em;">
-                <td style="text-align: left;">Review Later</td>
-                <td>{{exam.review[$index]}}</td>
-              </tr> -->
             </table>
-            <!-- <div style="display:inline-block;box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);min-height:5em;border-radius: 10px;" class="adjustwidth">
-            <div style="background-color:#25B5E9;min-height:3em;border-top-left-radius: 10px;border-top-right-radius: 10px;">
-              <span style="font-size:20px;color:#fff;padding:0.4em;position:absolute;" class="leftalign"><b>{{a.subject}}</b></span>
-            </div>
-            <div style="padding: 1em;">
-              <table style="width:100%">
-                <tr style="font-size:17px;">
-                  <td style="text-align: left;">Total No Questions</td>
-                  <td>{{summary.attempt+summary.notattempt+summary.reviewed+summary.notview}}</td>
-                </tr>
-                <tr style="font-size:17px;margin-top:1em;">
-                  <td style="text-align: left;">Attempted</td>
-                  <td>{{summary.attempt}}</td>
-                </tr>
-                <tr style="font-size:17px;margin-top:1em;">
-                  <td style="text-align: left;">Not Answered</td>
-                  <td>{{summary.notattempt}}</td>
-                </tr>
-                <tr style="font-size:17px;margin-top:1em;">
-                  <td style="text-align: left;">Not Visited</td>
-                  <td>{{summary.notview}}</td>
-                </tr>
-                <tr style="font-size:17px;margin-top:1em;">
-                  <td style="text-align: left;">Review Later</td>
-                  <td>{{summary.reviewed}}</td>
-                </tr>
-              </table>
-            </div>
-          </div> -->
           </div>
         </div>
       </div>
     </div>
     <div style="margin-top:4em;text-align:center;">
       <div class="container text-center" style="height:500px;">
-        <!-- <div class="col-md-offset-3 col-md-6" style="margin-top:2em;">
-          <canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-colours="colors">
-          </canvas> -->
-        <!-- <canvas class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick" style="display:block;width:500px;height:400px;">
-          </canvas> -->
-        <!-- </div> -->
         <div ng-repeat="a in subtitle" style="display:inline-block;" class="adjustwidth">
           <span style="font-size:20px;padding:0.4em;" class="leftalign"><b>{{a.title}}</b></span>
-          <canvas id="pie" class="chart chart-pie" chart-data="[a.correct,a.incorrect]" chart-labels="labels1" chart-colours="colors" style="margin-top:1em;">{{a.incorrect}}
+          <canvas id="pie" class="chart chart-pie" chart-data="[a.correct?a.correct:'0',a.incorrect?a.incorrect:'0']" chart-labels="labels1" chart-colours="colors" style="margin-top:1em;">
           </canvas>
         </div>
-        <!-- <button class="btnaction1" style="min-width:10%;" ng-click=""><b>View Score</b></button> -->
-
       </div>
     </div>
   </div>
