--- a/homepage/templates/tutorexam.html
+++ b/homepage/templates/tutorexam.html
@@ -45,6 +45,9 @@
 <script src="{% static 'js/angular.min.js' %}"></script>
 <script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
 <script src="{% static 'js/angular-flash.js' %}"></script>
+<script src="{% static 'js/angular-ui-router.min.js' %}"></script>
+<script src="{% static 'js/js.cookie.min.js' %}"></script>
+<script src="{% static 'js/custom/filters.js' %}"></script>
 <script src="{% static 'js/app.tutor.exam.js' %}"></script>
 <script src="{% static 'js/Chart.min.js' %}"></script>
 <script src="{% static 'js/angular-chart.min.js' %}"></script>
