--- a/homepage/templates/paperSolutions.html
+++ b/homepage/templates/paperSolutions.html
@@ -1,4 +1,4 @@
-{% extends "tutorBase.html" %}
+{% extends "tutorBase.html" %}{% load staticfiles %}
 
 {% block tutorcontent %}
 
@@ -99,4 +99,14 @@
     </div>
   </div>
 </div>
+{% endblock %}
+
+
+{% block tutorjs %}
+<script src="{% static 'js/app.tutor.paper.solution.js' %}"></script>
+<script src="{% static 'js/app.tutor.paper.solution.js' %}"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$']]} });
+</script>
 {% endblock %}
