--- a/homepage/templates/blog.html
+++ b/homepage/templates/blog.html
@@ -142,5 +142,5 @@
 {% endblock %}
 
 {% block tutorjs %}
-<script src="{% static 'js/app.tutor.blog.js' %}"></script>
+<script src="{% static 'js/app.tutor.index.js' %}"></script>
 {% endblock %}
