--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -335,5 +335,5 @@
   {% endblock %}
 
   {% block tutorjs %}
-  <script src="{% static 'js/app.tutor.home.main.js' %}"></script>
+  <script src="{% static 'js/app.tutor.index.js' %}"></script>
   {% endblock %}
