--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -112,7 +112,7 @@
       </div>
     </div>
     {% if not subPart %}
-    <div class="row" style="margin-top:2em;font-size:15px">
+    <div class="row" style="margin:2em;font-size:15px">
       <div class="col-md-8 col-md-offset-2">
         <span>{{subject.description}}</span>
       </div>
