--- a/support/templates/app.support.email.html
+++ b/support/templates/app.support.email.html
@@ -235,7 +235,7 @@
                         <h2>Support Conversation</h2>
                       </div>
                       <div class="">
-                        <p>Conversation started on: {{started}}</p>
+                        <p>Conversation started on: {{started}} (UTC)</p>
                       </div>
                     </div>
                   </td>
