--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -113,7 +113,7 @@
     <div class="col-md-1 mainUIViewParent" id="mainUIParent" style="width:96%;padding:0px;left:7rem;position:absolute;">
     {% endverbatim %}
       <div ng-include="headerUrl"></div>
-      <div id="mainUI" class="mainUIView" ui-view ng-if="modules.length>0">
+      <div id="mainUI" style="margin-top: 50px;" class="mainUIView" ui-view ng-if="modules.length>0">
 
         <style>
 
