--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -23,7 +23,7 @@
       <div class="row" style="margin-top:4em;">
         <div class="col-md-6 col-xs-12">
           <div style="margin-right:2em;display:inline-block;">
-            <h1><b>Class {{level}} std</b></h1>
+            <h1><b>Class {{level}}</b></h1>
           </div>
         </div>
       </div>
