--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -32,6 +32,7 @@
         <ul class="list-unstyled">
           <h4 class="text-muted"><b>NCERT Solutions</b></h4>
           <li><a href="/ncert-solutions-class-12-maths/">NCERT Class 12 Maths Solutions</a></li>
+          <li><a href="/cbse-class-11-maths-ncert-solutions/">NCERT Class 11 Maths Solutions</a></li>
         </ul>
       </div>
       <div class="nc_links col-md-3">
@@ -42,7 +43,8 @@
       <div class="nc_links col-md-3">
         <ul class="list-unstyled">
           <h4 class="text-muted"><b>Text Book Solutions</b></h4>
-          <li><a href="/hc-verma-solutions/">HC Verma Solutions</a></li>
+          <li><a href="/hc-verma-solutions/">HC Verma Volume 1 Solutions</a></li>
+          <li><a href="/hc-verma-part-2-solutions/">HC Verma Volume 2 Solutions</a></li>
         </ul>
       </div>
     </div>
