--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -136,21 +136,21 @@
           <div class="col-md-4 text-center">
             <div class="authors_div showhim">
               <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-              <div class="ok"><img src="/static/images/24tut/author1.png" class="round_img" width="70%"></div>
+              <div class="ok"><img src="/static/images/ashwini.jpeg" class="round_img" width="70%"></div>
             </div>
             <h4> <b>Ashwini</b> </h4>
           </div>
           <div class="col-md-4 text-center">
             <div class="authors_div showhim">
               <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-              <div class="ok"><img src="/static/images/24tut/author2.jpeg" class="round_img" width="70%"></div>
+              <div class="ok"><img src="/static/images/raj.jpg" class="round_img" width="70%"></div>
             </div>
             <h4> <b>Raj</b> </h4>
           </div>
           <div class="col-md-4 text-center">
             <div class="authors_div showhim">
               <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-              <div class="ok"><img src="/static/images/24tut/author3.jpg" class="round_img" width="70%"></div>
+              <div class="ok"><img src="/static/images/pradeep.png" class="round_img" width="70%"></div>
             </div>
             <h4> <b>Pradeep</b> </h4>
           </div>
@@ -159,16 +159,16 @@
           <div class="col-md-4 text-center">
             <div class="authors_div showhim">
               <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-              <div class="ok"><img src="/static/images/24tut/author4.jpeg" class="round_img" width="70%"></div>
+              <div class="ok"><img src="/static/images/atharwa.jpg" class="round_img" width="70%"></div>
             </div>
             <h4> <b> Atharva</b></h4>
           </div>
           <div class="col-md-4 text-center">
             <div class="authors_div showhim">
               <div class="showme"><img src="/static/images/24tut/profile_overlay.png" width="99%"></div>
-              <div class="ok"><img src="/static/images/24tut/author5.jpeg" class="round_img" width="70%"></div>
+              <div class="ok"><img src="/static/images/divyam.jpg" class="round_img" width="70%"></div>
             </div>
-            <h4> <b>Piyush</b> </h4>
+            <h4> <b>Divyam</b> </h4>
           </div>
           <div class="col-md-4 text-center">
             <div class="authors_div showhim">
