--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -65,17 +65,17 @@
 
           <!-- <li><a href="">Tutors</a></li> -->
           <!-- <li><a href="">Quiz & Tests </a></li> -->
-          <li><a href="/testimonials">Our Testimonials </a></li>
+          <li><a href="/testimonials/">Our Testimonials </a></li>
         </ul>
       </div>
       <div class="col-md-4 col-sm-6 footer">
         <ul class="folist">
           <h4 class="text-muted">Company</h4>
-          <li><a href="/about">About US</a></li>
+          <li><a href="/about/">About US</a></li>
           <!-- <li><a href="">Talk To Us</a></li> -->
-          <li><a href="/contact">Contact Us </a></li>
+          <li><a href="/contact/">Contact Us </a></li>
           <!-- <li><a href="">Help</a></li> -->
-          <li><a href="/career">Careers</a></li>
+          <li><a href="/career/">Careers</a></li>
 
         </ul>
       </div>
