--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -84,7 +84,7 @@
           <h4 class="text-muted"> Contact US</h4>
           <li><i class="fa fa-map-marker text-muted" aria-hidden="true"></i> <span> <b> Address:</b> </span> <span class="text-muted"> Bangalore,KA,India</span> </li>
           <li> <i class="fa fa-phone text-muted" aria-hidden="true"></i><span> <b> Phone:</b> </span> <span class="text-muted"> +9182373488</span> </li>
-          <li><i class="fa fa-envelope text-muted" aria-hidden="true"></i> <span> <b> Email:</b> </span> <span class="text-muted"> info@24tutors.in</span> </li>
+          <li><i class="fa fa-envelope text-muted" aria-hidden="true"></i> <span> <b> Email:</b> </span> <span class="text-muted"> gethelp@24tutors.com</span> </li>
         </ul>
       </div>
     </div>
