--- a/libreERP/templates/base.html
+++ b/libreERP/templates/base.html
@@ -40,6 +40,6 @@
 
   {% endif %}
 
-  <script async src="https://app.syrow.com/script/chatter-SFKOPOeCS2l8WcCg5N0tXwGf+Yd1T7iVNwH28qDmxt4=.js"></script>
+  <script defer src="https://app.syrow.com/script/chatter-SFKOPOeCS2l8WcCg5N0tXwGf+Yd1T7iVNwH28qDmxt4=.js"></script>
 
 </html>
