--- a/homepage/templates/examResults.html
+++ b/homepage/templates/examResults.html
@@ -91,9 +91,10 @@
     </div>
     <div style="margin-top:4em;text-align:center;">
       <div class="container text-center" style="height:500px;">
-        <div ng-repeat="a in subtitle" style="display:inline-block;" class="adjustwidth">
+        <div  ng-repeat="a in subtitle" style="display:inline-block;" class="adjustwidth">
           <span style="font-size:20px;padding:0.4em;" class="leftalign"><b>{{a.title}}</b></span>
-          <canvas id="pie" class="chart chart-pie" chart-data="[a.correct?a.correct:'0',a.incorrect?a.incorrect:'0']" chart-labels="labels1" chart-colours="colors" style="margin-top:1em;">
+          {{a.correct}}
+          <canvas id="pie" class="chart chart-pie" chart-data="[a.correct?a.correct:'0',a.incorrect]" chart-labels="labels1" chart-colours="colors" style="margin-top:1em;">
           </canvas>
         </div>
       </div>
